--- a/View/visualizzaagenda.html
+++ b/View/visualizzaagenda.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_caricamentoreferto_profilomedico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
@@ -75,10 +75,10 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzastoricoesami_perpaziente_profilomedico.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_profilomedico.html">Recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
@@ -107,7 +107,7 @@ https://templatemo.com/tm-566-medic-care
             </div>
         </div>
         <br><br>
-        <div class="col-9" id="elenco" style="position: absolute;left: 180px;">
+        <div>
             <table class="table">
                 <thead style="text-align: center;">
                     <tr>
@@ -119,14 +119,14 @@ https://templatemo.com/tm-566-medic-care
                         <th scope="col">Azione</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody style="text-align: center;">
                     <tr>
                         <td>Giacomo</td>
                         <td>Giannini</td>
                         <td>24/05/2024</td>
                         <td>10:00</td>
                         <td>Urologia</td>
-                        <td><a href="modificaappuntamento.html"><button class="btn btn-primary">Modifica</button></a></td>
+                        <td><a href="modificaappuntamento_profilomedico.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                     <tr>
                         <td>Piero</td>
@@ -134,7 +134,7 @@ https://templatemo.com/tm-566-medic-care
                         <td>01/01/2024</td>
                         <td>08:30</td>
                         <td>Neurologia</td>
-                        <td><a href="modificaappuntamento.html"><button class="btn btn-primary">Modifica</button></a></td>
+                        <td><a href="modificaappuntamento_profilomedico.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                     <tr>
                         <td>Elisabetta</td>
@@ -142,7 +142,7 @@ https://templatemo.com/tm-566-medic-care
                         <td>05/03/2024</td>
                         <td>11:20</td>
                         <td>Cardiologia</td>
-                        <td><a href="modificaappuntamento.html"><button class="btn btn-primary">Modifica</button></a></td>
+                        <td><a href="modificaappuntamento_profilomedico.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                 </tbody>
             </table>
