--- a/View/visualizzaesamiprenotati_profilopaziente.html
+++ b/View/visualizzaesamiprenotati_profilopaziente.html
@@ -56,7 +56,7 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="indexpaziente.html">Home</a>
+                                <a class="nav-link" href="indexpaziente.html" >Home</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="visualizzaesami_prenotazione.html">Prenota esame</a>
@@ -64,10 +64,12 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaesamiprenotati_profilopaziente.html">Visualizza Esami Prenotati</a>
                             </li>
+
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
+
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzastoricoesami_profilopaziente.html">Visualizza Storico Esami</a>
                             </li>
@@ -86,7 +88,7 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <h2><label for="storico">Esami Prenotati </label></h2>
+                            <h2><label for="storico">Elenco Appuntamenti</label></h2>
                             <br>
                             <select name="tipologia" id="tipologia" class="form-select">
                                 <option value="select">Seleziona una tipologia</option>
@@ -118,7 +120,7 @@ https://templatemo.com/tm-566-medic-care
                         <th scope="col">Medico</th>
                         <th scope="col">Tipologia</th>
                         <th scope="col">Costo</th>
-                        
+                        <th scope="col">Azione</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -128,6 +130,7 @@ https://templatemo.com/tm-566-medic-care
                         <td>Papile</td>
                         <td>Cardiologo</td>
                         <td>50€</td>
+                        <td><a href="modificaappuntamento_profilopaziente.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                     <tr>
                         <td>10/08/2024</td>
@@ -135,6 +138,7 @@ https://templatemo.com/tm-566-medic-care
                         <td>Iannotti</td>
                         <td>Neurologo</td>
                         <td>80€</td>
+                        <td><a href="modificaappuntamento_profilopaziente.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                     <tr>
                         <td>11/12/2024</td>
@@ -142,6 +146,7 @@ https://templatemo.com/tm-566-medic-care
                         <td>Di Simone</td>
                         <td>Oculistica</td>
                         <td>50€</td>
+                        <td><a href="modificaappuntamento_profilopaziente.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                 </tbody>
             </table>
