--- a/View/visualizzastoricoesami_perpaziente_profilomedico.html
+++ b/View/visualizzastoricoesami_perpaziente_profilomedico.html
@@ -9,7 +9,9 @@
 
         <title>Ambula Care</title>
 
-        <!-- CSS FILES -->        
+        <!-- CSS FILES -->
+        <link href="casimedico.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">     
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,9 +27,6 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
-
-        <link href="casimedico.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -55,47 +54,35 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="indexadmin.html">Home</a>
+                                <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
+                                <a class="nav-link" href="visualizzastoricoesami_caricamentoreferto_profilomedico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaappuntamenti_admin.html">Visualizza appuntamenti</a>
+                                <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
                             </li>
 
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#timeline">Timeline</a>
-                            </li>-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="inseriscislotorario.html">Carica slot per appuntamento</a>
+                            </li>
 
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#booking">Booking</a>
-                            </li>-->
-
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaesami_admin.html">Visualizza esami</a>
+                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_admin.html">Visualizza recensioni</a>
+                                <a class="nav-link" href="visualizzastoricoesami_perpaziente_profilomedico.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
+                                <a class="nav-link" href="visualizzarecensioni_profilomedico.html">Recensioni</a>
                             </li>
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>-->
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
+                            </li>
                         </ul>
                     </div>
 
@@ -109,57 +96,54 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <!--<h3><label for="categ">Tipologia</label></h3>-->
-                            <select name="languages" id="categ" class="form-select">
-                                <option value="select">Ordina per</option>
-                                <option value="dentista">Nome</option>
-                                <option value="oculista">Cognome</option>
-                                <option value="otorino">Data appuntamento</option>
+                        <h2>Ricerca Pazienti</h2>
+                        <br>
+                            <input type="text" id="nomepaziente" placeholder="Nome Paziente" name="nomepaziente" required>
+                            <br><br>
+                            <input type="text" id="cognomepaziente" placeholder="Cognome Paziente" name="cognomepaziente" required>
+                            
+                        <br><br>
+                            <select name="ordinaricerca" id="ordina" class="form-select">
+                                <option value="select">Ordina per cognome o nome</option>
+                                <option value="nome">Nome</option>
+                                <option value="cognome">Cognome</option>
                             </select>
-                        </div>
-                            <br>
-                                <div>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
-                                    </input>
-                                    </div>
-                                    <br>
-                            <button type="submit" class="btn btn-primary">Effettua ricerca</button>
+                        <br>
+                        <button type="submit" class="btn btn-primary">Avvia Ricerca Paziente</button>
+                    </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="col-9" id="elenco">
+        <br><br>
+        <div>
             <table class="table">
-                <thead>
+                <thead style="text-align: center;">
                     <tr>
                         <th scope="col">Nome Paziente</th>
                         <th scope="col">Cognome Paziente</th>
-                        <th scope="col">Data</th>
-                        <th scope="col">Valutazione</th>
-                        <th scope="col">Azioni</th>
+                        <th scope="col">Data Di Nascita</th>
+                        <th scope="col">Azione</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody style="text-align: center;">
                     <tr>
                         <td>Giacomo</td>
                         <td>Giannini</td>
-                        <td>24/05/2024</td>
-                        <td>3/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>11/07/2002</td>
+                        <td><a href="visualizzastoricoesamipaziente_profilomedico.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
                     </tr>
                     <tr>
-                        <td>Piero</td>
-                        <td>Marcozzi</td>
-                        <td>01/01/2024</td>
-                        <td>4/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>Nadia</td>
+                        <td>Muzyka</td>
+                        <td>15/09/2002</td>
+                        <td><a href="visualizzastoricoesamipaziente_profilomedico.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
                     </tr>
                     <tr>
-                        <td>Elisabetta</td>
-                        <td>Mecozzi</td>
-                        <td>05/03/2024</td>
-                        <td>1/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>Andrea</td>
+                        <td>Iannotti</td>
+                        <td>20/08/2002</td>
+                        <td><a href="visualizzastoricoesamipaziente_profilomedico.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
                     </tr>
                 </tbody>
             </table>
