--- a/View/indexmedico.html
+++ b/View/indexmedico.html
@@ -25,6 +25,7 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+
         <link href="casimedico.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
 <!--
@@ -56,8 +57,8 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item active">
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
-                            <li class="nav-item active"><!-- serve per caricamento referto (devo cambiare nome)-->
-                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="visualizzastoricoesami_caricamentoreferto_profilomedico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
@@ -71,29 +72,18 @@ https://templatemo.com/tm-566-medic-care
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
-
                             <li class="nav-item">
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzastoricoesami_perpaziente_profilomedico.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_profilomedico.html">Recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
                             </li>
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>-->
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>-->
                         </ul>
                     </div>
 
