--- a/View/inseriscireferto.html
+++ b/View/inseriscireferto.html
@@ -25,6 +25,7 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+        
         <link href="casimedico.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
 
@@ -58,7 +59,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_caricamentoreferto_profilomedico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
@@ -76,10 +77,10 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzastoricoesami_perpaziente_profilomedico.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_profilomedico.html">Recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
@@ -104,18 +105,17 @@ https://templatemo.com/tm-566-medic-care
                     <h2>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h2>
                     <br><br>
                     <form action="#">
-                        <div class="form-group"></div>
-                            <label for="oggetto">Oggetto Referto: </label>
-                            <input id="oggetto" name="oggetto" placeholder="Oggetto" style="width: 800px;height: 35px;">
-                            <br><br><br><label for="contenuto">Contenuto Referto:</label>
-                            <input id="contenuto" name="contenuto" placeholder="Scrivi qua" style="width: 800px;height: 170px;">
+                            <h3><label for="oggetto">Oggetto Referto: </label>
+                            <input id="oggetto" name="oggetto" placeholder="Oggetto" style="width: 800px;height: 35px;"/></h3>
+                            <br><h3><label for="contenuto">Contenuto Referto:</label>
+                            <input id="contenuto" name="contenuto" placeholder="Scrivi qua" style="width: 800px;height: 170px;"></h3>
                             <br><br><br><br>
                             <div style="position: absolute;left: 550px;">
                                 <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
                                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                                 <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
                                 </div>
-                        </div>
+
                     </form>
                 </div>
             </div>
