--- a/View/modificaappuntamento_profiloadmin.html
+++ b/View/modificaappuntamento_profiloadmin.html
@@ -10,7 +10,6 @@
         <title>Ambula Care</title>
 
         <!-- CSS FILES -->     
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,10 +25,8 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
-
-        <link href="casimedico.css" rel="stylesheet">
-
-        <link href="font.css" rel="stylesheet">
+        <link href="casiadmin.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet"> 
 
 <!--
 
@@ -58,34 +55,26 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="indexmedico.html">Home</a>
+                                <a class="nav-link" href="indexadmin.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="visualizzastoricoesami_caricamentoreferto_profilomedico.html">Storico esami</a>
+                                <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
+                                <a class="nav-link" href="visualizzaappuntamenti_profiloadmin.html">Visualizza appuntamenti</a>
                             </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="inseriscislotorario.html">Carica slot per appuntamento</a>
-                            </li>
-
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
                             <li class="nav-item">
-                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
+                                <a class="nav-link" href="visualizzastoricoesami_profiloadmin.html">Visualizza esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzastoricoesami_perpaziente_profilomedico.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzarecensioni_profiloadmin.html">Visualizza recensioni</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_profilomedico.html">Recensioni</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
+                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
                             </li>
                         </ul>
                     </div>
@@ -101,8 +90,9 @@ https://templatemo.com/tm-566-medic-care
                     <form action="#">
                         <div class="form-group" >
                             <div class="col-9" id="elenco">
-                                <h2>Disponibilità Orari Attuale</h2>
-                                <br>
+                                <h2>Esame: Visita Cardiologica&ensp;&ensp;&ensp;&ensp;Costo: 70€</h2>
+                                <h2>Medico: Emanuele Papile&ensp;&ensp;&ensp;Data Odierna: 02/06/24</h2>
+                                <h2>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Disponibilità Orari del Medico</h2>
                                 <div>
                                     <button><</button>
                                     <button style="position: absolute;left: 1055px;">></button>
@@ -171,11 +161,8 @@ https://templatemo.com/tm-566-medic-care
                                 </table>
                                 <br>
                                 <div>
-                                    <h3><label>Disponibile in data : </label>&ensp;<input type="date" id="datadisp" placeholder="Data Disponibile" name="datadisp" />
-                                    <br>
-                                    <label>Inizio orario di Disponibilità : </label>&ensp;<input type="time" id="inizioorario" placeholder="Inizio Orario" name="inizioorario" />
-                                    <br>
-                                    <label>Fine orario di Disponibilità : </label>&ensp;<input type="time" id="fineorario" placeholder="Fine Orario" name="fineorario" /></h3>
+                                    <h4><label>Nuova Data :</label><input type="date" id="nuovadata" placeholder="Nuova Data" name="nuovadata" />&ensp;&ensp;&ensp;&ensp;&ensp;<label>Vecchia Data: 07/06/24</label></h4>
+                                    <h4><label>Nuovo Orario : </label><input type="time" id="nuovoorario" placeholder="Nuovo Orario" name="nuovoorario" />&ensp;&ensp;&ensp;&ensp;&ensp;<label>Vecchio Orario: 11:30</label></h4>
                                     </div>
                             </div>
                         </div>
@@ -189,6 +176,7 @@ https://templatemo.com/tm-566-medic-care
                 </div>
             </div>
         </div>
+                    
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
