--- a/View/modificaappuntamento_profilomedico.html
+++ b/View/modificaappuntamento_profilomedico.html
@@ -9,9 +9,9 @@
 
         <title>Ambula Care</title>
 
-        <!-- CSS FILES --> 
+        <!-- CSS FILES -->
         <link href="casimedico.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">       
+        <link href="font.css" rel="stylesheet">      
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,7 +58,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_caricamentoreferto_profilomedico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
@@ -76,10 +76,10 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzastoricoesami_perpaziente_profilomedico.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_profilomedico.html">Recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
@@ -91,65 +91,41 @@ https://templatemo.com/tm-566-medic-care
             </nav>
 
         </main>
-        <br><br>
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <br>
+                    <h1>Modifica Appuntamento</h1>
+                    <br><br>
+                    <h2>Paziente : Giacomo Giannini</h2>
+                    <h2>Medico : Dott. Emanuele Papile</h2>
+                    <h2>Esame : Visita Neurologica</h2>
+                    <h2>Costo: 70€</h2>
+                    <br><br>
                     <form action="#">
-                        <div class="form-group" >
-                            <h2>Storico Esami</h2>
+                        <div class="form-group"></div>
+                            <h3><label for="vecchiadata">Vecchia Data Appuntamento : 01/06/2024</label>
                             <br>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" />
-                                    <br><br>
-                            <button type="submit" class="btn btn-primary">Filtra Risultati</button>
+                            <label for="nuovadata">Nuova Data Appuntamento: </label>
+                            <input type="date" id="datanuova" name="datanuova" />
+                            <br>
+                            <label for="vecchiaora">Vecchia Ora Appuntamento: 10:00</label>
+                            <br>
+                            <label for="nuovadata">Nuova Ora Appuntamento: </label>
+                            <input type="time" id="datanuova" name="datanuova" /></h3>
+                            <br><br><br><br><br>
+                            <div style="position: absolute;left: 550px;">
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                                </div>
                         </div>
                     </form>
+                    
                 </div>
             </div>
         </div>
-        <br><br>
-        <div class="col-9" id="elenco" style="position: absolute;left: 180px;">
-            <table class="table">
-                <thead style="text-align: center;">
-                    <tr>
-                        <th scope="col">Nome Paziente</th>
-                        <th scope="col">Cognome Paziente</th>
-                        <th scope="col">Data</th>
-                        <th scope="col">Ora</th>
-                        <th scope="col">Tipologia</th>
-                        <th scope="col">Azioni</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Giacomo</td>
-                        <td>Giannini</td>
-                        <td>24/05/2024</td>
-                        <td>10:00</td>
-                        <td>Urologia</td>
-                        <td><a href="inseriscireferto.html"><button class="btn btn-primary">Carica Referto</button></a></td>
-                    </tr>
-                    <tr>
-                        <td>Piero</td>
-                        <td>Marcozzi</td>
-                        <td>01/01/2024</td>
-                        <td>08:30</td>
-                        <td>Neurologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button>
-                        <button class="btn btn-primary">Cancella Referto</button></td>
-                    </tr>
-                    <tr>
-                        <td>Elisabetta</td>
-                        <td>Mecozzi</td>
-                        <td>05/03/2024</td>
-                        <td>11:20</td>
-                        <td>Cardiologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button>
-                        <button class="btn btn-primary">Elimina Referto</button></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+                    
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
