--- a/View/rispostarecensione_profilomedico.html
+++ b/View/rispostarecensione_profilomedico.html
@@ -27,6 +27,7 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+
 <!--
 
 TemplateMo 566 Medic Care
@@ -57,7 +58,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_caricamentoreferto_profilomedico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
@@ -75,10 +76,10 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzastoricoesami_perpaziente_profilomedico.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_profilomedico.html">Recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
@@ -90,66 +91,36 @@ https://templatemo.com/tm-566-medic-care
             </nav>
 
         </main>
-        <br><br>
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <br>
+                    <h1>Risposta Recensione</h1>
+                    <br><br>
+                    <h2>Paziente : Giacomo Giannini</h2>
+                    <br>
+                    <h2>Categoria : Neurologia &ensp;&ensp;&ensp;&ensp;Costo: 70€</h2>
+                    <br>
+                    <h2>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h2>
+                    <br>
                     <form action="#">
-                        <div class="form-group" >
-                        <h2>Ricerca Pazienti</h2>
-                        <br>
-                            <input type="text" id="nomepaziente" placeholder="Nome Paziente" name="nomepaziente" required>
-                            <br><br>
-                            <input type="text" id="cognomepaziente" placeholder="Cognome Paziente" name="cognomepaziente" required>
-                            </div>
-                            
-                        <br>
-                        <div>
-                            <select name="ordina" id="ordina" class="form-select">
-                                <option value="select">Ordina per cognome o nome</option>
-                                <option value="nome">Nome</option>
-                                <option value="cognome">Cognome</option>
-                            </select>
+                        <div class="form-group"></div>
+                            <h3><label for="oggetto">Oggetto Risposta: </label>
+                            <input id="oggetto" name="oggetto" placeholder="Oggetto" style="width: 800px;height: 35px;">
+                            <br><br><label for="contenuto">Contenuto Risposta:</label>
+                            <input id="contenuto" name="contenuto" placeholder="Scrivi qua" style="width: 800px;height: 170px;"></h3>
+                            <br><br><br><br><br>
+                            <div style="position: absolute;left: 550px;">
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                                </div>
                         </div>
-                        <br>
-                        <button type="submit" class="btn btn-primary">Avvia Ricerca Paziente</button>
                     </form>
                 </div>
             </div>
         </div>
-        <br><br>
-        <div class="col-9" id="elenco" style="position: absolute;left: 180px;">
-            <table class="table">
-                <thead style="text-align: center;">
-                    <tr>
-                        <th scope="col">Nome Paziente</th>
-                        <th scope="col">Cognome Paziente</th>
-                        <th scope="col">Data Di Nascita</th>
-                        <th scope="col">Azione</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Giacomo</td>
-                        <td>Giannini</td>
-                        <td>11/07/2002</td>
-                        <td><a href="visualizzastoricoesamipaziente.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
-                    </tr>
-                    <tr>
-                        <td>Nadia</td>
-                        <td>Muzyka</td>
-                        <td>15/09/2002</td>
-                        <td><a href="visualizzastoricoesamipaziente.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
-                    </tr>
-                    <tr>
-                        <td>Andrea</td>
-                        <td>Iannotti</td>
-                        <td>20/08/2002</td>
-                        <td><a href="visualizzastoricoesamipaziente.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+                    
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
