--- a/View/visualizzaappuntamenti_profiloadmin.html
+++ b/View/visualizzaappuntamenti_profiloadmin.html
@@ -9,9 +9,7 @@
 
         <title>Ambula Care</title>
 
-        <!-- CSS FILES -->
-        <link href="casimedico.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">     
+        <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +25,10 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+
+        <link rel="stylesheet" href="casiadmin.css">
+
+        <link href="font.css" rel="stylesheet">
 
 <!--
 
@@ -55,34 +57,26 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="indexmedico.html">Home</a>
+                                <a class="nav-link" href="indexadmin.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
+                                <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
+                                <a class="nav-link" href="visualizzaappuntamenti_profiloadmin.html">Visualizza appuntamenti</a>
                             </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="inseriscislotorario.html">Carica slot per appuntamento</a>
-                            </li>
-
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
                             <li class="nav-item">
-                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
+                                <a class="nav-link" href="visualizzastoricoesami_profiloadmin.html">Visualizza esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzarecensioni_profiloadmin.html">Visualizza recensioni</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
+                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
                             </li>
                         </ul>
                     </div>
@@ -94,33 +88,75 @@ https://templatemo.com/tm-566-medic-care
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <br>
-                    <h1>Risposta Recensione</h1>
-                    <br><br>
-                    <h2>Paziente : Giacomo Giannini</h2>
-                    <br>
-                    <h2>Categoria : Neurologia &ensp;&ensp;&ensp;&ensp;Costo: 70€</h2>
-                    <br>
-                    <h2>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h2>
-                    <br>
                     <form action="#">
-                        <div class="form-group"></div>
-                            <label for="oggetto">Oggetto Risposta: </label>
-                            <input id="oggetto" name="oggetto" placeholder="Oggetto" style="width: 800px;height: 35px;">
-                            <br><br><label for="contenuto">Contenuto Risposta:</label>
-                            <input id="contenuto" name="contenuto" placeholder="Scrivi qua" style="width: 800px;height: 170px;">
-                            <br><br><br><br><br>
-                            <div style="position: absolute;left: 550px;">
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
-                                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
-                                </div>
+                        <div class="form-group" >
+                            <br><br>
+                            <h2><label>Gestione Appuntamenti</label></h2>
+                            <br>
+                            <select name="tipologia" id="categ" class="form-select">
+                                <option value="select">Seleziona una tipologia</option>
+                                <option value="dentista">dentista</option>
+                                <option value="oculista">oculista</option>
+                                <option value="otorino">otorino</option>
+                                <option value="cardiologo">cardiologo</option>
+                                <option value="radiologo">radiologo</option>
+                                <option value="neurologo">neurologo</option>
+                                <option value="urologo">urologo</option>
+                                <option value="neurofisiopatologo">neurofisiopatologo</option>
+                            </select>
+                            <br>
+                                <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" />
+                            <br><br>
+                                <input type="time" id="oraprenotinizio" placeholder="Orario prenotazione" name="oraprenotinizio" />
+                                <input type="time" id="oraprenotfine" placeholder="Orario prenotazione" name="oraprenotfine" />
+                                <br><br>
+                            <button type="submit" class="btn btn-primary">Filtra Risultati</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-                    
+        <br><br>
+        <div>
+            <table class="table">
+                <thead style="text-align: center;">
+                    <tr>
+                        <th scope="col">Data</th>
+                        <th scope="col">Ora</th>
+                        <th scope="col">Medico</th>
+                        <th scope="col">Tipologia</th>
+                        <th scope="col">Costo</th>
+                        <th scope="col">Azioni</th>
+                    </tr>
+                </thead>
+                <tbody style="text-align: center;">
+                    <tr>
+                        <td>01/06/2024</td>
+                        <td>10:00</td>
+                        <td>Papile</td>
+                        <td>Cardiologo</td>
+                        <td>50€</td>
+                        <td><a href="modificaappuntamento_profiloadmin.html"><button class="btn btn-primary">Modifica</button></a></td>
+                    </tr>
+                    <tr>
+                        <td>10/08/2024</td>
+                        <td>12:00</td>
+                        <td>Iannotti</td>
+                        <td>Neurologo</td>
+                        <td>80€</td>
+                        <td><a href="modificaappuntamento_profiloadmin.html"><button class="btn btn-primary">Modifica</button></a></td>
+                    </tr>
+                    <tr>
+                        <td>11/12/2024</td>
+                        <td>09:00</td>
+                        <td>Di Simone</td>
+                        <td>Oculistica</td>
+                        <td>50€</td>
+                        <td><a href="modificaappuntamento_profiloadmin.html"><button class="btn btn-primary">Modifica</button></a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
