--- a/View/visualizzarecensioni_profiloadmin.html
+++ b/View/visualizzarecensioni_profiloadmin.html
@@ -61,41 +61,21 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaappuntamenti_admin.html">Visualizza appuntamenti</a>
+                                <a class="nav-link" href="visualizzaappuntamenti_profiloadmin.html">Visualizza appuntamenti</a>
                             </li>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#timeline">Timeline</a>
-                            </li>-->
-
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#booking">Booking</a>
-                            </li>-->
-
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaesami_admin.html">Visualizza esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_profiloadmin.html">Visualizza esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_admin.html">Visualizza recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_profiloadmin.html">Visualizza recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
                             </li>
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>-->
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>-->
                         </ul>
                     </div>
 
@@ -109,45 +89,56 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <input type="text" id="tipologia" placeholder="Tipologia" name="tipologia" />
-                            </div>
-                            
-                        
-                        <br>
-                        <button type="submit" class="btn btn-primary">Avvia Ricerca Esame</button>
+                            <h2><label for="recensioni">Recensioni</label></h2>
+                            <br>
+                            <select name="recensioni" id="categ" class="form-select">
+                                <option value="select">Ordina per</option>
+                                <option value="dentista">Nome</option>
+                                <option value="oculista">Cognome</option>
+                                <option value="otorino">Data appuntamento</option>
+                            </select>
+                            <br>
+                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required/>
+                                    <br><br>
+                            <button type="submit" class="btn btn-primary">Effettua ricerca</button>
+                            </div>  
                     </form>
                 </div>
             </div>
         </div>
-        <br>
-        <div class="col-9" id="elenco">
+        <br><br>
+        <div>
             <table class="table">
-                <thead>
+                <thead style="text-align: center;">
                     <tr>
                         <th scope="col">Nome Paziente</th>
                         <th scope="col">Cognome Paziente</th>
-                        <th scope="col">Data Di Nascita</th>
+                        <th scope="col">Data</th>
+                        <th scope="col">Valutazione</th>
                         <th scope="col">Azione</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody style="text-align: center;">
                     <tr>
                         <td>Giacomo</td>
                         <td>Giannini</td>
-                        <td>11/07/2002</td>
-                        <td><a href="visualizzastoricoesamipaziente.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
+                        <td>24/05/2024</td>
+                        <td>3/5</td>
+                        <td><button class="btn btn-primary">Dettagli</button></td>
                     </tr>
                     <tr>
-                        <td>Nadia</td>
-                        <td>Muzyka</td>
-                        <td>15/09/2002</td>
-                        <td><a href="visualizzastoricoesamipaziente.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
+                        <td>Piero</td>
+                        <td>Marcozzi</td>
+                        <td>01/01/2024</td>
+                        <td>4/5</td>
+                        <td><button class="btn btn-primary">Dettagli</button></td>
                     </tr>
                     <tr>
-                        <td>Andrea</td>
-                        <td>Iannotti</td>
-                        <td>20/08/2002</td>
-                        <td><a href="visualizzastoricoesamipaziente.html"><button class="btn btn-primary">Visualizza Storico Esami</button></a></td>
+                        <td>Elisabetta</td>
+                        <td>Mecozzi</td>
+                        <td>05/03/2024</td>
+                        <td>1/5</td>
+                        <td><button class="btn btn-primary">Dettagli</button></td>
                     </tr>
                 </tbody>
             </table>
