--- a/View/visualizzarecensioni_profilomedico.html
+++ b/View/visualizzarecensioni_profilomedico.html
@@ -9,7 +9,9 @@
 
         <title>Ambula Care</title>
 
-        <!-- CSS FILES -->        
+        <!-- CSS FILES -->
+        <link href="casimedico.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">     
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,43 +57,32 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="visualizzastoricoesami_medico.html">Storico esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_caricamentoreferto_profilomedico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#timeline">Carica slot per appuntamento</a>
+                                <a class="nav-link" href="inseriscislotorario.html">Carica slot per appuntamento</a>
                             </li>
 
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
-
                             <li class="nav-item">
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzastoricoesami_perpaziente_profilomedico.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#booking">Recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_profilomedico.html">Recensioni</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
+                                <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
                             </li>
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>-->
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>-->
                         </ul>
                     </div>
 
@@ -105,68 +96,56 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <!--<h3><label for="categ">Tipologia</label></h3>
-                            <select name="languages" id="categ" class="form-select">
-                                <option value="select">Seleziona una tipologia</option>
-                                <option value="dentista">dentista</option>
-                                <option value="oculista">oculista</option>
-                                <option value="otorino">otorino</option>
-                                <option value="cardiologo">cardiologo</option>
-                                <option value="radiologo">radiologo</option>
-                                <option value="neurologo">neurologo</option>
-                                <option value="urologo">urologo</option>
-                                <option value="neurofisiopatologo">neurofisiopatologo</option>
-                            </select>-->
-                        </div>
+                            <h2>Recensioni</h2>
                             <br>
-                                <div>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
-                                    </input>
-                                    </div>
-                                    <br>
-                            <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
+                            <select name="ordinarecensioni" id="categ" class="form-select">
+                                <option value="select">Ordina per</option>
+                                <option value="dentista">Nome</option>
+                                <option value="oculista">Cognome</option>
+                                <option value="otorino">Data appuntamento</option>
+                            </select>
+                            <br>
+                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required/>
+                                    <br><br>
+                            <button type="submit" class="btn btn-primary">Effettua ricerca</button>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="col-9" id="elenco">
+        <br><br>
+        <div>
             <table class="table">
-                <thead>
+                <thead style="text-align: center;">
                     <tr>
                         <th scope="col">Nome Paziente</th>
                         <th scope="col">Cognome Paziente</th>
                         <th scope="col">Data</th>
-                        <th scope="col">Ora</th>
-                        <th scope="col">Tipologia</th>
+                        <th scope="col">Valutazione</th>
                         <th scope="col">Azioni</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody style="text-align: center;">
                     <tr>
                         <td>Giacomo</td>
                         <td>Giannini</td>
                         <td>24/05/2024</td>
-                        <td>10:00</td>
-                        <td>Urologia</td>
-                        <td><button class="btn btn-primary">Carica Referto</button></td>
+                        <td>3/5</td>
+                        <td><a href="rispostarecensione_profilomedico.html"><button class="btn btn-primary">Dettagli</button></a></td>
                     </tr>
                     <tr>
                         <td>Piero</td>
                         <td>Marcozzi</td>
                         <td>01/01/2024</td>
-                        <td>08:30</td>
-                        <td>Neurologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                        <td><button class="btn btn-primary">Cancella Referto</button></td>
+                        <td>4/5</td>
+                        <td><a href="rispostarecensione_profilomedico.html"><button class="btn btn-primary">Dettagli</button></a></td>
                     </tr>
                     <tr>
                         <td>Elisabetta</td>
                         <td>Mecozzi</td>
                         <td>05/03/2024</td>
-                        <td>11:20</td>
-                        <td>Cardiologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                        <td><button class="btn btn-primary">Elimina Referto</button></td>
+                        <td>1/5</td>
+                        <td><a href="rispostarecensione_profilomedico.html"><button class="btn btn-primary">Dettagli</button></a></td>
                     </tr>
                 </tbody>
             </table>
