--- a/View/visualizzastoricoesamipaziente_profiloadmin.html
+++ b/View/visualizzastoricoesamipaziente_profiloadmin.html
@@ -9,9 +9,7 @@
 
         <title>Ambula Care</title>
 
-        <!-- CSS FILES -->
-        <link href="casimedico.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">     
+        <!-- CSS FILES -->      
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +25,8 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+        <link href="casiadmin.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">  
 <!--
 
 TemplateMo 566 Medic Care
@@ -54,34 +54,26 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="indexmedico.html">Home</a>
+                                <a class="nav-link" href="indexadmin.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
+                                <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
+                                <a class="nav-link" href="visualizzaappuntamenti_profiloadmin.html">Visualizza appuntamenti</a>
                             </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="inseriscislotorario.html">Carica slot per appuntamento</a>
-                            </li>
-
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
                             <li class="nav-item">
-                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
+                                <a class="nav-link" href="visualizzastoricoesami_profiloadmin.html">Visualizza esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
+                                <a class="nav-link" href="visualizzarecensioni_profiloadmin.html">Visualizza recensioni</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
+                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
                             </li>
                         </ul>
                     </div>
@@ -94,58 +86,40 @@ https://templatemo.com/tm-566-medic-care
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <form action="#">
-                        <div class="form-group" >
-                            <h2>Recensioni</h2>
-                            <br>
-                            <select name="ordinarecensioni" id="categ" class="form-select">
-                                <option value="select">Ordina per</option>
-                                <option value="dentista">Nome</option>
-                                <option value="oculista">Cognome</option>
-                                <option value="otorino">Data appuntamento</option>
-                            </select>
-                            <br>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required/>
-                                    <br><br>
-                            <button type="submit" class="btn btn-primary">Effettua ricerca</button>
-                        </div>
-                    </form>
+                    <h2>Storico Esami di Giacomo Giannini</h2>
                 </div>
             </div>
         </div>
         <br><br>
-        <div class="col-9" id="elenco" style="position: absolute;left: 180px;">
+        <div>
             <table class="table">
                 <thead style="text-align: center;">
                     <tr>
-                        <th scope="col">Nome Paziente</th>
-                        <th scope="col">Cognome Paziente</th>
                         <th scope="col">Data</th>
-                        <th scope="col">Valutazione</th>
-                        <th scope="col">Azioni</th>
+                        <th scope="col">Ora</th>
+                        <th scope="col">Tipologia</th>
+                        <th scope="col">Medico</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody style="text-align: center;">
                     <tr>
-                        <td>Giacomo</td>
-                        <td>Giannini</td>
-                        <td>24/05/2024</td>
-                        <td>3/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>11/01/2022</td>
+                        <td>09:00</td>
+                        <td>Cardiologia</td>
+                        <td>Dottor Papile</td>
+                        
                     </tr>
                     <tr>
-                        <td>Piero</td>
-                        <td>Marcozzi</td>
-                        <td>01/01/2024</td>
-                        <td>4/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>05/10/2022</td>
+                        <td>10:00</td>
+                        <td>Radiologia</td>
+                        <td>Dottoressa Carmenini</td>
                     </tr>
                     <tr>
-                        <td>Elisabetta</td>
-                        <td>Mecozzi</td>
-                        <td>05/03/2024</td>
-                        <td>1/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>28/05/2023</td>
+                        <td>11:00</td>
+                        <td>Neurologia</td>
+                        <td>Dottoressa Quintiliani</td>
                     </tr>
                 </tbody>
             </table>
