aggiunta convenzioni URL e piccoli ritocchi grafici

--- a/View/visualizzaesami_prenotazione.html
+++ b/View/visualizzaesami_prenotazione.html
@@ -113,7 +113,7 @@ https://templatemo.com/tm-566-medic-care
         <br><br>
             <div>
                 <table class="table">
-                    <thead>
+                    <thead style="text-align: center;">
                         <tr>
                             <th scope="col">Medico</th>
                             <th scope="col">Tipologia</th>
@@ -122,7 +122,7 @@ https://templatemo.com/tm-566-medic-care
                             <th scope="col">Azione</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody style="text-align: center;">
                         <tr>
                             <td>Pippo</td>
                             <td>Oculista</td>
