--- a/View/visualizzaesamiprenotati_profilopaziente.html
+++ b/View/visualizzaesamiprenotati_profilopaziente.html
@@ -113,7 +113,7 @@ https://templatemo.com/tm-566-medic-care
         <br><br>
         <div>
             <table class="table">
-                <thead>
+                <thead style="text-align: center;">
                     <tr>
                         <th scope="col">Data</th>
                         <th scope="col">Ora</th>
@@ -123,7 +123,7 @@ https://templatemo.com/tm-566-medic-care
                         <th scope="col">Azione</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody style="text-align: center;">
                     <tr>
                         <td>01/06/2024</td>
                         <td>10:00</td>
